--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,4 +4,13 @@
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home_black_24"
         android:title="@string/title_home" />
+    <item
+        android:id="@+id/scanFragment"
+        android:icon="@drawable/baseline_scanner_24"
+        android:title="@string/Scan" />
+    <item
+        android:id="@+id/profileFragment"
+        android:icon="@drawable/baseline_person_24"
+        android:title="@string/profile" />
+
 </menu>
