--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -5,12 +5,12 @@
         android:icon="@drawable/ic_home_black_24"
         android:title="@string/title_home" />
     <item
-        android:id="@+id/scanFragment"
+        android:id="@+id/navigation_scan"
         android:icon="@drawable/baseline_scanner_24"
-        android:title="@string/Scan" />
+        android:title="@string/title_scan" />
     <item
-        android:id="@+id/profileFragment"
+        android:id="@+id/navigation_profile"
         android:icon="@drawable/baseline_person_24"
-        android:title="@string/profile" />
+        android:title="@string/title_profile" />
 
 </menu>
