--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
     <style name="Base.Theme.P3tsKit" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <!--main color-->
+        <item name="colorPrimary">@color/blue</item>
+        <!--secondary color-->
+        <item name="colorSecondary">@color/peach</item>
+        <!--bg color-->
+        <item name="android:colorBackground">@color/white</item>
+        <!--text color-->
+        <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:textColorSecondary">@color/black</item>
     </style>
 
     <style name="Theme.P3tsKit" parent="Base.Theme.P3tsKit" />
