--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -69,7 +69,7 @@
                     android:layout_width="70dp"
                     android:layout_height="25dp"
                     android:layout_marginTop="8dp"
-                    android:background="@drawable/white_bg"
+                    android:background="@drawable/whitehome_bg"
                     android:gravity="center"
                     android:orientation="horizontal"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -108,7 +108,7 @@
                     android:layout_height="140dp"
                     android:layout_marginTop="4dp"
                     android:gravity="center"
-                    android:background="@drawable/white_bg"
+                    android:background="@drawable/whitehome_bg"
                     android:elevation="3dp"
                     android:orientation="horizontal"
                     app:layout_constraintEnd_toEndOf="parent"
