Add Model Setup

--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -28,7 +28,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btnUpload"
+            android:id="@+id/buttonUpload"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
@@ -37,7 +37,7 @@
             android:textColor="@color/white" />
 
         <Button
-            android:id="@+id/btnScan"
+            android:id="@+id/buttonScan"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
