--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -16,6 +16,7 @@
         android:layout_marginBottom="16dp" />
 
     <ImageView
+        android:id="@+id/scanImage"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_gravity="center"
