--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -21,6 +21,8 @@
         android:layout_height="200dp"
         android:layout_gravity="center"
         android:layout_marginBottom="16dp"
+        android:scaleType="centerCrop"
+        android:contentDescription="@string/image_preview"
         android:src="@drawable/placeholder" />
 
     <LinearLayout
@@ -29,7 +31,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/buttonCamera"
+            android:id="@+id/buttonGallery"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
@@ -38,17 +40,16 @@
             android:textColor="@color/white" />
 
         <Button
-            android:id="@+id/buttonScan"
+            android:id="@+id/buttonCamera"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/scan"
+            android:text="@string/camera"
             android:textColor="@color/white" />
-
     </LinearLayout>
 
     <Button
-        android:id="@+id/buttonUpload"
+        android:id="@+id/buttonScan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
