--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,8 +53,7 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:ems="10"
-          android:inputType="textEmailAddress"
-          android:importantForAccessibility="yes" />
+          android:inputType="textEmailAddress"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
@@ -80,8 +79,7 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:ems="10"
-          android:inputType="textPassword"
-          android:importantForAccessibility="yes" />
+          android:inputType="textPassword"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
