--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -48,7 +48,7 @@
                     android:layout_marginTop="12dp"
                     android:text="@string/title_hello"
                     android:textColor="@color/white"
-                    android:textSize="18sp"
+                    android:textSize="15sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toEndOf="@id/img_avatar"
                     app:layout_constraintTop_toTopOf="@id/img_avatar" />
@@ -59,31 +59,32 @@
                     android:layout_height="wrap_content"
                     android:text="@string/user"
                     android:textColor="@color/white"
-                    android:textSize="26sp"
+                    android:textSize="20sp"
                     android:textStyle="bold"
+                    android:layout_marginTop="3dp"
                     app:layout_constraintStart_toStartOf="@id/tv_hello"
                     app:layout_constraintTop_toBottomOf="@id/tv_hello" />
 
                 <LinearLayout
                     android:id="@+id/ly_move"
-                    android:layout_width="70dp"
+                    android:layout_width="80dp"
                     android:layout_height="25dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="12dp"
                     android:background="@drawable/whitehome_bg"
                     android:gravity="center"
                     android:orientation="horizontal"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.398"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/tv_user"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="@+id/tv_user"
                     app:layout_constraintTop_toBottomOf="@id/tv_user">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
-                        android:text="P3tsKit"
+                        android:text="@string/app_name"
                         android:textColor="@color/black"
-                        android:textSize="10sp"
+                        android:textSize="11sp"
                         android:textStyle="bold" />
 
                     <ImageView
@@ -104,11 +105,10 @@
 
                 <LinearLayout
                     android:id="@+id/ll_cards"
-                    android:layout_width="360dp"
+                    android:layout_width="match_parent"
                     android:layout_height="140dp"
                     android:layout_marginTop="4dp"
                     android:gravity="center"
-                    android:background="@drawable/whitehome_bg"
                     android:elevation="3dp"
                     android:orientation="horizontal"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -151,53 +151,97 @@
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/tv_newsletter"
-                    android:layout_width="0dp"
+                <LinearLayout
+                    android:id="@+id/ll_tv_news"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginStart="25dp"
-                    android:text="@string/newsletter"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
+                    android:orientation="horizontal"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginTop="25dp"
                     app:layout_constraintTop_toBottomOf="@id/ll_cards"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" />
+                    app:layout_constraintEnd_toEndOf="parent">
+
+                    <TextView
+                        android:id="@+id/tv_news"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginLeft="20dp"
+                        android:text="@string/newsletter"
+                        android:textSize="18sp"
+                        android:textColor="@color/black"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tv_see_more_news"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="@string/see_more"
+                        android:textColor="@color/navy"
+                        android:textStyle="bold"
+                        android:textSize="14sp"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:layout_marginRight="12dp"
+                        android:paddingEnd="8dp" />
+                </LinearLayout>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_news"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:layout_marginLeft="16dp"
                     android:layout_marginRight="16dp"
-                    app:layout_constraintTop_toBottomOf="@id/tv_newsletter"
+                    app:layout_constraintTop_toBottomOf="@id/ll_tv_news"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" />
 
-                <TextView
-                    android:id="@+id/tv_history"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/history"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginStart="25dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/rv_news" />
+<!--                <LinearLayout-->
+<!--                    android:id="@+id/ll_tv_history"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:orientation="horizontal"-->
+<!--                    android:layout_marginHorizontal="16dp"-->
+<!--                    android:layout_marginTop="20dp"-->
+<!--                    android:layout_marginLeft="16dp"-->
+<!--                    app:layout_constraintTop_toBottomOf="@id/rv_news"-->
+<!--                    app:layout_constraintStart_toStartOf="parent"-->
+<!--                    app:layout_constraintEnd_toEndOf="parent">-->
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_history"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_history" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/tv_history"-->
+<!--                        android:layout_width="0dp"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:text="@string/history"-->
+<!--                        android:textSize="18sp"-->
+<!--                        android:textStyle="bold" />-->
+
+<!--                    <TextView-->
+<!--                        android:id="@+id/tv_see_more_history"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_gravity="center"-->
+<!--                        android:text="@string/see_more"-->
+<!--                        android:textColor="@color/black"-->
+<!--                        android:textSize="14sp"-->
+<!--                        android:paddingEnd="8dp" />-->
+<!--                </LinearLayout>-->
+
+<!--                <androidx.recyclerview.widget.RecyclerView-->
+<!--                    android:id="@+id/rv_history"-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="200dp"-->
+<!--                    android:layout_marginTop="5dp"-->
+<!--                    android:layout_marginLeft="16dp"-->
+<!--                    android:layout_marginRight="16dp"-->
+<!--                    app:layout_constraintStart_toStartOf="parent"-->
+<!--                    app:layout_constraintEnd_toEndOf="parent"-->
+<!--                    app:layout_constraintTop_toBottomOf="@id/ll_tv_history" />-->
+
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
     </ScrollView>
