--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -3,58 +3,77 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/scan_your_pet"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         android:gravity="center"
-        android:layout_marginBottom="16dp" />
+        android:paddingTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:textColor="@color/black"/>
 
-    <ImageView
-        android:id="@+id/scanImage"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="250dp"
+        android:layout_marginBottom="20dp"
         android:layout_gravity="center"
-        android:layout_marginBottom="16dp"
-        android:scaleType="centerCrop"
-        android:contentDescription="@string/image_preview"
-        android:src="@drawable/placeholder" />
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:cardCornerRadius="12dp"
+        android:cardElevation="6dp">
+
+        <ImageView
+            android:id="@+id/scanImage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:contentDescription="@string/image_preview"
+            android:src="@drawable/placeholder"
+            android:layout_margin="5dp"/>
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
+        android:gravity="center">
 
         <Button
             android:id="@+id/buttonGallery"
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:text="@string/ChooseImage"
-            android:textColor="@color/white" />
+            android:text="@string/gallery"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:padding="12dp"/>
+
+        <Button
+            android:id="@+id/buttonScan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/scan"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:layout_marginEnd="8dp"
+            android:padding="12dp"/>
 
         <Button
             android:id="@+id/buttonCamera"
-            android:layout_width="0dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="@string/camera"
-            android:textColor="@color/white" />
-    </LinearLayout>
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:padding="12dp"/>
 
-    <Button
-        android:id="@+id/buttonScan"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:text="@string/upload" />
+    </LinearLayout>
 
 </LinearLayout>
