--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -72,6 +72,16 @@
             android:ellipsize="end" />
 
         <TextView
+            android:id="@+id/tv_note"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/note"
+            android:textSize="14sp"
+            android:layout_marginBottom="4dp"
+            android:maxLines="2"
+            android:ellipsize="end" />
+
+        <TextView
             android:id="@+id/tv_source"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -80,6 +90,13 @@
             android:layout_marginBottom="4dp"
             android:maxLines="2"
             android:ellipsize="end" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
     </LinearLayout>
 
 </LinearLayout>
