--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,6 +11,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="90dp"
         android:fillViewport="true">
 
         <LinearLayout
@@ -118,13 +119,15 @@
 
                     <androidx.cardview.widget.CardView
                         android:id="@+id/card_cat"
-                        android:layout_width="160dp"
+                        android:layout_width="match_parent"
                         android:layout_height="120dp"
-                        android:layout_marginEnd="16dp"
+                        android:layout_marginStart="35dp"
+                        android:layout_marginEnd="35dp"
                         android:clickable="true"
                         android:focusable="true"
                         app:cardCornerRadius="12dp"
-                        app:cardElevation="4dp">
+                        app:cardElevation="4dp"
+                        app:layout_constraintWidth_percent="1.0">
 
                         <ImageView
                             android:id="@+id/img_cat"
@@ -132,23 +135,6 @@
                             android:layout_height="match_parent"
                             android:scaleType="centerCrop"
                             android:contentDescription="@string/content_cat" />
-                    </androidx.cardview.widget.CardView>
-
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/card_dog"
-                        android:layout_width="160dp"
-                        android:layout_height="120dp"
-                        android:clickable="true"
-                        android:focusable="true"
-                        app:cardCornerRadius="12dp"
-                        app:cardElevation="4dp">
-
-                        <ImageView
-                            android:id="@+id/img_dog"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:scaleType="centerCrop"
-                            android:contentDescription="@string/content_dog" />
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
 
@@ -200,12 +186,6 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="70dp"
-                    app:layout_constraintBottom_toBottomOf="@id/rv_news"/>
-
                 <ProgressBar
                     android:id="@+id/progressBar"
                     android:layout_width="wrap_content"
@@ -215,7 +195,6 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" />
-
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
