--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,7 +9,8 @@
     android:layout_marginTop="12dp"
     android:layout_marginEnd="12dp"
     android:layout_marginBottom="8dp"
-    card_view:cardCornerRadius="4dp">
+    card_view:cardCornerRadius="4dp"
+    android:background="?attr/colorOnBackground">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -40,19 +40,21 @@
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toEndOf="@+id/img_news"
             card_view:layout_constraintTop_toTopOf="parent"
-            android:text="@string/title_news"/>
+            android:text="@string/title_news"
+            android:textColor="?attr/colorOnBackground"/>
 
         <TextView
             android:id="@+id/tv_description"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:ellipsize="end"
             android:maxLines="2"
             card_view:layout_constraintBottom_toBottomOf="@id/img_news"
             card_view:layout_constraintEnd_toEndOf="@id/tv_title"
             card_view:layout_constraintStart_toStartOf="@+id/tv_title"
             card_view:layout_constraintTop_toBottomOf="@+id/tv_title"
-            android:text="@string/description_news"/>
+            android:text="@string/description_news"
+            android:textColor="?attr/colorOnBackground"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
