--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -87,6 +87,7 @@
             android:text="@string/register"
             android:textSize="17sp"
             android:elevation="5dp"
+            android:layout_gravity="center"
             android:backgroundTint="@color/blue"
             app:cornerRadius="4dp"
             android:layout_marginStart="10dp"/>
