--- a/app/src/main/res/drawable/description_bg.xml
+++ b/app/src/main/res/drawable/description_bg.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <solid android:color="@color/light_pink" />
+    <solid android:color="@color/yellow" />
     <corners android:radius="10dp"/>
-    <stroke android:width="5dp" android:color="@color/yellow" />
+    <stroke android:width="2dp" android:color="@color/dark_peach" />
 </shape>
