--- a/app/src/main/res/layout/fragment_detail_scan_page.xml
+++ b/app/src/main/res/layout/fragment_detail_scan_page.xml
@@ -35,7 +35,7 @@
                 <ImageView
                     android:id="@+id/result_image"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="300dp"
                     android:scaleType="centerCrop"
                     android:src="@drawable/placeholder" />
             </androidx.cardview.widget.CardView>
@@ -92,6 +92,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="17sp"
+                    android:justificationMode="inter_word"
+                    android:textColor="@color/black"
                     android:layout_marginBottom="12dp" />
 
                 <TextView
@@ -108,6 +110,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="17sp"
+                    android:justificationMode="inter_word"
+                    android:textColor="@color/black"
                     android:layout_marginBottom="12dp" />
 
                 <TextView
@@ -124,6 +128,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="17sp"
+                    android:justificationMode="inter_word"
+                    android:textColor="@color/black"
                     android:layout_marginBottom="12dp" />
 
                 <TextView
@@ -139,7 +145,9 @@
                     android:id="@+id/tv_note"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
                     android:textSize="17sp"
+                    android:justificationMode="inter_word"
                     android:layout_marginBottom="12dp" />
             </LinearLayout>
 
@@ -166,6 +174,9 @@
                     android:id="@+id/tv_source"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:linksClickable="true"
+                    android:textColorLink="@color/navy"
                     android:textSize="17sp"
                     android:layout_marginBottom="12dp" />
             </LinearLayout>
