--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,7 +27,7 @@
                     android:id="@+id/logo"
                     android:layout_width="match_parent"
                     android:layout_height="155dp"
-                    android:background="@drawable/gradient_bg"
+                    android:background="@drawable/blue"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" />
@@ -51,7 +51,7 @@
                     android:layout_marginTop="12dp"
                     android:text="@string/title_hello"
                     android:textColor="@color/white"
-                    android:textSize="15sp"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toEndOf="@id/img_avatar"
                     app:layout_constraintTop_toTopOf="@id/img_avatar" />
@@ -62,7 +62,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/user"
                     android:textColor="@color/white"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     android:layout_marginTop="3dp"
                     app:layout_constraintStart_toStartOf="@id/tv_hello"
