--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -1,158 +1,189 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:androidapp="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:androidapp="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/scan_your_pet"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:paddingTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:textColor="@color/black" />
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:layout_marginBottom="20dp"
-        android:layout_gravity="center"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        androidapp:cardCornerRadius="12dp"
-        androidapp:cardElevation="6dp">
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/scanImage"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:contentDescription="@string/image_preview"
-                android:src="@drawable/scancatdog"
-                android:layout_margin="5dp" />
-
-            <View
-                android:layout_width="30dp"
-                android:layout_height="5dp"
-                android:background="@color/green"
-                android:layout_gravity="top|start"
-                android:layout_margin="10dp" />
-
-            <View
-                android:layout_width="5dp"
-                android:layout_height="30dp"
-                android:background="@color/green"
-                android:layout_gravity="top|start"
-                android:layout_margin="10dp" />
-
-            <View
-                android:layout_width="30dp"
-                android:layout_height="5dp"
-                android:background="@color/green"
-                android:layout_gravity="top|end"
-                android:layout_margin="10dp" />
-
-            <View
-                android:layout_width="5dp"
-                android:layout_height="30dp"
-                android:background="@color/green"
-                android:layout_gravity="top|end"
-                android:layout_margin="10dp" />
-
-            <View
-                android:layout_width="30dp"
-                android:layout_height="5dp"
-                android:background="@color/green"
-                android:layout_gravity="bottom|start"
-                android:layout_margin="10dp" />
-
-            <View
-                android:layout_width="5dp"
-                android:layout_height="30dp"
-                android:background="@color/green"
-                android:layout_gravity="bottom|start"
-                android:layout_margin="10dp" />
-
-            <View
-                android:layout_width="30dp"
-                android:layout_height="5dp"
-                android:background="@color/green"
-                android:layout_gravity="bottom|end"
-                android:layout_margin="10dp" />
-
-            <View
-                android:layout_width="5dp"
-                android:layout_height="30dp"
-                android:background="@color/green"
-                android:layout_gravity="bottom|end"
-                android:layout_margin="10dp" />
-        </FrameLayout>
-    </androidx.cardview.widget.CardView>
+    android:fillViewport="true">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
-        android:gravity="center">
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/buttonGallery"
-            android:layout_width="120dp"
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:text="@string/gallery"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:padding="12dp" />
+            android:text="@string/scan_your_pet"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:paddingTop="20dp"
+            android:layout_marginBottom="20dp" />
 
-        <Button
-            android:id="@+id/buttonScan"
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_marginBottom="20dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            androidapp:cardCornerRadius="12dp"
+            androidapp:cardElevation="6dp">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/scanImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:contentDescription="@string/image_preview"
+                    android:src="@drawable/scancatdog"
+                    android:layout_margin="5dp" />
+
+                <View
+                    android:layout_width="30dp"
+                    android:layout_height="5dp"
+                    android:background="@color/green"
+                    android:layout_gravity="top|start"
+                    android:layout_margin="10dp" />
+
+                <View
+                    android:layout_width="5dp"
+                    android:layout_height="30dp"
+                    android:background="@color/green"
+                    android:layout_gravity="top|start"
+                    android:layout_margin="10dp" />
+
+                <View
+                    android:layout_width="30dp"
+                    android:layout_height="5dp"
+                    android:background="@color/green"
+                    android:layout_gravity="top|end"
+                    android:layout_margin="10dp" />
+
+                <View
+                    android:layout_width="5dp"
+                    android:layout_height="30dp"
+                    android:background="@color/green"
+                    android:layout_gravity="top|end"
+                    android:layout_margin="10dp" />
+
+                <View
+                    android:layout_width="30dp"
+                    android:layout_height="5dp"
+                    android:background="@color/green"
+                    android:layout_gravity="bottom|start"
+                    android:layout_margin="10dp" />
+
+                <View
+                    android:layout_width="5dp"
+                    android:layout_height="30dp"
+                    android:background="@color/green"
+                    android:layout_gravity="bottom|start"
+                    android:layout_margin="10dp" />
+
+                <View
+                    android:layout_width="30dp"
+                    android:layout_height="5dp"
+                    android:background="@color/green"
+                    android:layout_gravity="bottom|end"
+                    android:layout_margin="10dp" />
+
+                <View
+                    android:layout_width="5dp"
+                    android:layout_height="30dp"
+                    android:background="@color/green"
+                    android:layout_gravity="bottom|end"
+                    android:layout_margin="10dp" />
+
+            </FrameLayout>
+        </androidx.cardview.widget.CardView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/buttonGallery"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:text="@string/gallery"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:padding="12dp" />
+
+            <Button
+                android:id="@+id/buttonCamera"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:text="@string/camera"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:layout_marginEnd="8dp"
+                android:padding="12dp" />
+
+            <Button
+                android:id="@+id/buttonScan"
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:text="@string/scan"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/brown"
+                android:textSize="16sp"
+                android:padding="12dp" />
+        </LinearLayout>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
+            androidapp:cardCornerRadius="12dp"
+            androidapp:cardElevation="6dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <TextView
+                    android:id="@+id/howTo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/howto"
+                    android:textStyle="bold"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/howToUseText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/howtouse"
+                    android:justificationMode="inter_word"
+                    android:textSize="16sp"
+                    android:lineSpacingExtra="4dp"
+                    android:layout_marginTop="10dp" />
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/scan"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:layout_marginEnd="8dp"
-            android:padding="12dp" />
-
-        <Button
-            android:id="@+id/buttonCamera"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:text="@string/camera"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:padding="12dp" />
+            android:layout_gravity="center"
+            android:visibility="gone" />
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/howToUseText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
-        android:text="@string/howtouse"
-        android:textSize="16sp"
-        android:textColor="@color/black"
-        android:lineSpacingExtra="4dp" />
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:visibility="gone" />
-</LinearLayout>
+</ScrollView>
