--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,13 @@
     <color name="white">#FFFFFFFF</color>
     <color name="light_pink">#FEF7FF</color>
     <color name="yellow">#FFE6D1</color>
-    <color name="navy">#157DA8</color>
+    <color name="navy">#196589</color>
     <color name="green">#00FF00</color>
+    <color name="brown">#E1CAAC</color>
+    <color name="darkbrown">#A07845</color>
+    <color name="orange">#FADECF</color>
+    <color name="gray">#BAB8B8</color>
+
+    <color name="bottom_nav_item_selected">#E7A7B2</color>
+    <color name="bottom_nav_item_unselected">#A7CDE7</color>
 </resources>
