--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="light_pink">#FEF7FF</color>
     <color name="yellow">#FFE6D1</color>
     <color name="navy">#196589</color>
+    <color name="darknavy">#162142</color>
     <color name="green">#00FF00</color>
     <color name="brown">#E1CAAC</color>
     <color name="darkbrown">#A07845</color>
