--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,10 +1,10 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/gradient_bg"
     tools:context=".ui.welcome.WelcomeActivity">
 
     <TextView
@@ -13,83 +13,91 @@
         android:layout_height="wrap_content"
         android:text="@string/welcome"
         android:textSize="30sp"
-        android:textStyle="normal"
-        android:textColor="@color/black"
-        android:layout_marginTop="100dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:fontFamily="@font/inter_semi_bold"
+        android:layout_marginTop="80dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_welcome_to"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
-        android:textSize="30sp"
+        android:textSize="36sp"
         android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_marginTop="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        android:textColor="@color/white"
+        android:fontFamily="@font/inter_semi_bold"
+        android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_welcome"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />
 
     <ImageView
         android:id="@+id/img_logo"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="24dp"
+        android:src="@drawable/logo_p3tskit"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_welcome_to"
-        app:srcCompat="@drawable/logo_p3tskit" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_welcome_to" />
 
     <TextView
         android:id="@+id/tv_desc"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/short_desc"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="@id/img_logo"
-        app:layout_constraintStart_toStartOf="@id/img_logo"
-        app:layout_constraintTop_toBottomOf="@id/img_logo"/>
+        android:textSize="18sp"
+        android:textColor="@color/white"
+        android:fontFamily="@font/js_semibold"
+        android:gravity="center"
+        android:layout_marginTop="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/img_logo" />
 
     <LinearLayout
         android:id="@+id/buttonContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="60dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_desc">
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_login"
-            android:layout_width="130dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:text="@string/login"
-            android:elevation="5dp"
-            android:textSize="17sp"
-            android:backgroundTint="@color/peach"
-            app:cornerRadius="4dp"
-            android:layout_marginEnd="10dp"/>
+            android:textSize="18sp"
+            android:fontFamily="@font/inter_semi_bold"
+            android:textColor="@color/white"
+            app:cornerRadius="24dp"
+            android:layout_marginBottom="18dp"
+            android:backgroundTint="@color/darknavy"
+            app:strokeColor="@color/white"
+            app:strokeWidth="2dp"
+            app:icon="@drawable/ic_baseline_login_24" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_register"
-            android:layout_width="130dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:text="@string/register"
-            android:textSize="17sp"
-            android:elevation="5dp"
-            android:layout_gravity="center"
-            android:backgroundTint="@color/blue"
-            app:cornerRadius="4dp"
-            android:layout_marginStart="10dp"/>
+            android:textSize="18sp"
+            android:fontFamily="@font/inter_semi_bold"
+            android:textColor="@color/white"
+            app:cornerRadius="24dp"
+            android:backgroundTint="@color/dark_peach"
+            app:strokeColor="@color/white"
+            app:strokeWidth="2dp"
+            app:icon="@drawable/ic_baseline_app_registration_24" />
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
