--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
     <color name="green">#00FF00</color>
     <color name="brown">#E1CAAC</color>
     <color name="darkbrown">#A07845</color>
-    <color name="orange">#FADECF</color>
+    <color name="orange">#FFF4F6</color>
     <color name="gray">#BAB8B8</color>
 
     <color name="bottom_nav_item_selected">#E7A7B2</color>
