--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/catdog"
+        android:layout_height="270dp"
+        android:background="@drawable/bg1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,14 +26,14 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="150dp">
+            android:layout_height="wrap_content">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="12dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="4dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -49,20 +49,33 @@
                     android:padding="16dp">
 
                     <TextView
+                        android:id="@+id/tv_register"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_gravity="center"
+                        android:contentDescription="@string/register"
+                        android:text="@string/register"
+                        android:textSize="24sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/blue"
+                        android:fontFamily="@font/inter_semi_bold" />
+
+                    <TextView
                         android:id="@+id/tv_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
                         android:contentDescription="@string/name"
                         android:text="@string/name"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"
+                        android:fontFamily="@font/inter_semi_bold" />
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/nameEditTextLayout"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
                         app:startIconDrawable="@drawable/ic_baseline_person_24">
 
                         <com.google.android.material.textfield.TextInputEditText
@@ -81,7 +94,8 @@
                         android:layout_marginTop="8dp"
                         android:contentDescription="@string/email"
                         android:text="@string/email"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"
+                        android:fontFamily="@font/inter_semi_bold" />
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/emailEditTextLayout"
@@ -105,14 +119,16 @@
                         android:layout_marginTop="8dp"
                         android:contentDescription="@string/password"
                         android:text="@string/password"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"
+                        android:fontFamily="@font/inter_semi_bold" />
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/passwordEditTextLayout"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:startIconDrawable="@drawable/ic_baseline_key_24">
+                        app:startIconDrawable="@drawable/ic_baseline_key_24"
+                        app:endIconMode="password_toggle">
 
                         <com.application.p3tskit.ui.customview.CustomPassword
                             android:id="@+id/passwordEditText"
@@ -147,6 +163,7 @@
                 android:text="@string/login_redirect"
                 android:textColor="@color/blue"
                 android:textSize="14sp"
+                android:fontFamily="@font/inter_semi_bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/cardView" />
