--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -12,10 +12,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/welcome"
-        android:textSize="30sp"
+        android:textSize="22sp"
         android:textStyle="bold"
-        android:textColor="@color/white"
         android:fontFamily="@font/inter_semi_bold"
+        android:textColor="@color/black"
         android:layout_marginTop="80dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,9 +28,9 @@
         android:text="@string/app_name"
         android:textSize="36sp"
         android:textStyle="bold"
-        android:textColor="@color/white"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/inter_semi_bold"
-        android:layout_marginTop="8dp"
+        android:textColor="@color/dark_peach"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_welcome" />
@@ -39,7 +39,7 @@
         android:id="@+id/img_logo"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="30dp"
         android:src="@drawable/logo_p3tskit"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,8 +51,9 @@
         android:layout_height="wrap_content"
         android:text="@string/short_desc"
         android:textSize="18sp"
-        android:textColor="@color/white"
-        android:fontFamily="@font/js_semibold"
+        android:textStyle="bold"
+        android:fontFamily="@font/inter_semi_bold"
+        android:textColor="@color/black"
         android:gravity="center"
         android:layout_marginTop="24dp"
         app:layout_constraintStart_toStartOf="parent"
