--- a/app/src/main/res/layout/fragment_detail_scan_page.xml
+++ b/app/src/main/res/layout/fragment_detail_scan_page.xml
@@ -1,54 +1,44 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:elevation="8dp">
+
+            <ImageView
+                android:id="@+id/result_image"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/placeholder"/>
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="16dp"
+            android:background="@drawable/white_bg"
+            android:elevation="8dp"
+            android:layout_marginTop="-50dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/scan_result"
-                android:paddingTop="16dp"
-                android:paddingLeft="16dp"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:layout_marginBottom="16dp" />
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                app:cardElevation="4dp"
-                app:cardCornerRadius="4dp"
-                app:cardBackgroundColor="@color/white">
 
-                <ImageView
-                    android:id="@+id/result_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/placeholder" />
-            </androidx.cardview.widget.CardView>
-
+            <!-- Diagnose section -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginLeft="16dp"
-                android:background="@drawable/diagnose_bg"
-                android:layout_marginBottom="16dp">
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/diagnose_bg">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -57,26 +47,28 @@
                     android:textSize="20sp"
                     android:textColor="@color/black"
                     android:textStyle="bold"
-                    android:layout_marginBottom="8dp" />
+                    android:layout_marginBottom="8dp"
+                    android:fontFamily="@font/inter_semi_bold"/>
 
                 <TextView
                     android:id="@+id/tv_predicted_class"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="17sp"
+                    android:textStyle="normal"
                     android:textColor="@color/black"
-                    android:layout_marginBottom="8dp" />
+                    android:layout_marginBottom="8dp"
+                    android:fontFamily="@font/inter"/>
             </LinearLayout>
 
+            <!-- Description and symptoms -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginLeft="16dp"
-                android:background="@drawable/description_bg"
-                android:layout_marginBottom="16dp">
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/description_bg">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -85,16 +77,19 @@
                     android:textSize="20sp"
                     android:textColor="@color/black"
                     android:textStyle="bold"
-                    android:layout_marginBottom="8dp" />
+                    android:layout_marginBottom="8dp"
+                    android:fontFamily="@font/inter_semi_bold"/>
 
                 <TextView
                     android:id="@+id/tv_result_description"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="17sp"
-                    android:justificationMode="inter_word"
+                    android:textSize="15sp"
                     android:textColor="@color/black"
-                    android:layout_marginBottom="12dp" />
+                    android:layout_marginBottom="12dp"
+                    android:justificationMode="inter_word"
+                    android:textStyle="normal"
+                    android:fontFamily="@font/inter"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -103,34 +98,40 @@
                     android:textSize="20sp"
                     android:textColor="@color/black"
                     android:textStyle="bold"
-                    android:layout_marginBottom="8dp" />
+                    android:layout_marginBottom="8dp"
+                    android:fontFamily="@font/inter_semi_bold"/>
 
                 <TextView
                     android:id="@+id/symptoms"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="17sp"
-                    android:justificationMode="inter_word"
+                    android:textSize="15sp"
                     android:textColor="@color/black"
-                    android:layout_marginBottom="12dp" />
+                    android:layout_marginBottom="12dp"
+                    android:textStyle="normal"
+                    android:justificationMode="inter_word"
+                    android:fontFamily="@font/inter"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/treatment"
-                    android:textSize="18sp"
+                    android:textSize="20sp"
                     android:textColor="@color/black"
                     android:textStyle="bold"
-                    android:layout_marginBottom="8dp" />
+                    android:layout_marginBottom="8dp"
+                    android:fontFamily="@font/inter_semi_bold"/>
 
                 <TextView
                     android:id="@+id/tv_treatment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="17sp"
-                    android:justificationMode="inter_word"
+                    android:textSize="15sp"
                     android:textColor="@color/black"
-                    android:layout_marginBottom="12dp" />
+                    android:layout_marginBottom="12dp"
+                    android:textStyle="normal"
+                    android:justificationMode="inter_word"
+                    android:fontFamily="@font/inter"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -139,27 +140,28 @@
                     android:textSize="20sp"
                     android:textColor="@color/black"
                     android:textStyle="bold"
-                    android:layout_marginBottom="8dp" />
+                    android:layout_marginBottom="8dp"
+                    android:fontFamily="@font/inter_semi_bold"/>
 
                 <TextView
                     android:id="@+id/tv_note"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
-                    android:textSize="17sp"
+                    android:textSize="15sp"
                     android:justificationMode="inter_word"
-                    android:layout_marginBottom="12dp" />
+                    android:layout_marginBottom="12dp"
+                    android:textStyle="normal"
+                    android:fontFamily="@font/inter"/>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginRight="16dp"
-                android:layout_marginLeft="16dp"
                 android:padding="16dp"
-                android:background="@drawable/source_bg"
-                android:layout_marginBottom="16dp">
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/source_bg">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -168,7 +170,8 @@
                     android:textSize="20sp"
                     android:textColor="@color/black"
                     android:textStyle="bold"
-                    android:layout_marginBottom="8dp" />
+                    android:layout_marginBottom="8dp"
+                    android:fontFamily="@font/inter_semi_bold"/>
 
                 <TextView
                     android:id="@+id/tv_source"
@@ -176,27 +179,49 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
                     android:linksClickable="true"
+                    android:justificationMode="inter_word"
                     android:textColorLink="@color/navy"
-                    android:textSize="17sp"
-                    android:layout_marginBottom="12dp" />
+                    android:textSize="15sp"
+                    android:textStyle="normal"
+                    android:layout_marginBottom="12dp"
+                    android:fontFamily="@font/inter"/>
+
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="50dp"
+                android:padding="16dp"
                 android:layout_marginBottom="16dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:fontFamily="@font/inter_semi_bold"/>
+
+                <TextView
+                    android:id="@+id/tv_place"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="17sp"
+                    android:layout_marginBottom="12dp"
+                    android:fontFamily="@font/inter"/>
+
             </LinearLayout>
 
         </LinearLayout>
 
+        <!-- Progress bar in the center of the screen -->
         <ProgressBar
             android:id="@+id/progress_bar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_gravity="center"
             android:visibility="gone"
             android:indeterminate="true" />
-    </RelativeLayout>
+
+    </LinearLayout>
+
 </ScrollView>
