--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -3,7 +3,8 @@
     xmlns:androidapp="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:fillViewport="true"
+    android:background="@color/orange">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -117,8 +118,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:text="@string/gallery"
+                android:fontFamily="@font/inter_semi_bold"
                 android:textColor="@color/white"
                 android:textSize="16sp"
+                android:textStyle="bold"
                 android:padding="12dp" />
 
             <Button
@@ -126,8 +129,10 @@
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:text="@string/camera"
+                android:fontFamily="@font/inter_semi_bold"
                 android:textColor="@color/white"
                 android:textSize="16sp"
+                android:textStyle="bold"
                 android:layout_marginEnd="8dp"
                 android:padding="12dp" />
 
@@ -136,8 +141,10 @@
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:text="@string/scan"
+                android:fontFamily="@font/inter_semi_bold"
                 android:textColor="@color/white"
-                android:backgroundTint="@color/brown"
+                android:textStyle="bold"
+                android:backgroundTint="@color/peach"
                 android:textSize="16sp"
                 android:padding="12dp" />
         </LinearLayout>
@@ -145,11 +152,11 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
-            androidapp:cardCornerRadius="12dp"
-            androidapp:cardElevation="6dp">
+            androidapp:cardCornerRadius="16dp"
+            androidapp:cardElevation="8dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -162,20 +169,22 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/howto"
-                    android:textStyle="bold"
-                    android:textSize="18sp" />
+                    android:fontFamily="@font/inter_semi_bold"
+                    android:textSize="18sp"
+                    android:textColor="@color/black" />
 
                 <TextView
                     android:id="@+id/howToUseText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/howtouse"
+                    android:fontFamily="@font/inter"
                     android:justificationMode="inter_word"
                     android:textSize="16sp"
-                    android:lineSpacingExtra="4dp"
-                    android:layout_marginTop="10dp" />
+                    android:lineSpacingExtra="6dp"
+                    android:layout_marginTop="10dp"
+                    android:textColor="@color/black" />
             </LinearLayout>
-
         </androidx.cardview.widget.CardView>
 
         <ProgressBar
@@ -187,3 +196,4 @@
             android:visibility="gone" />
     </LinearLayout>
 </ScrollView>
+
